--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=food-finder
 
-spring.datasource.url=jdbc:mysql://localhost:3306/food-finder?useUnicode=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/food-finder?useUnicode=true&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=qwerty
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.liquibase.change-log=classpath:db/changelog/dbchangelog.xml
