--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     expose:
       - '3306'
     volumes:
-      - mysql-db:/var/lib/mysql
+      - mysql-db-ff:/var/lib/mysql
       - ./utils/init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
-  mysql-db:
+  mysql-db-ff:
