--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=food-finder
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/food-finder?useUnicode=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/food-finder?useUnicode=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 
