--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/food-finder?useU
 spring.datasource.username=root
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:db/changelog/dbchangelog.xml
